@@ -16,22 +16,20 @@ repositories {
 }
 
 dependencies {
-    annotationProcessor 'info.picocli:picocli-codegen:4.5.2'
-    implementation 'info.picocli:picocli:4.5.2'
+    annotationProcessor 'info.picocli:picocli-codegen:4.6.0'
+    implementation 'info.picocli:picocli:4.6.0'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.moshi:moshi:1.11.0'
     implementation 'com.serjltt.moshi:moshi-lazy-adapters:2.2'
     implementation 'org.tomlj:tomlj:1.0.0'
     implementation 'org.influxdb:influxdb-java:2.21'
-    implementation 'org.slf4j:slf4j-api:1.7.+'
-    runtimeOnly 'ch.qos.logback:logback-classic:1.+'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+    runtimeOnly 'org.slf4j:slf4j-simple:1.7.30'
 
     testImplementation('org.spockframework:spock-core:2.0-M4-groovy-3.0')
     testImplementation('com.squareup.okhttp3:mockwebserver:4.9.0')
     testImplementation("org.slf4j:slf4j-simple:1.7.+")
-    //implementation platform('org.testcontainers:testcontainers-bom:1.14.3') //import bom
-    //testCompile "org.testcontainers:influxdb:1.14.3"
 }
 
 application {
@@ -114,6 +112,7 @@ jar {
             'Build-Version'  : versioning.info.tag ?: (versioning.info.branch + "-" + versioning.info.build),
             'Build-Revision' : versioning.info.commit,
             'Build-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ss.SSSZ").toString(),
+            'Add-Opens'      : 'java.base/java.lang.invoke' // To ignore "Illegal reflective access by retrofit2.Platform" warnings
         )
     }
 }
